--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,7 @@
 .note{
     @apply bg-white border rounded-md shadow-md p-3 w-60 m-4 float-left
 }
+
+.todo_input {
+    @apply w-full flex rounded-lg mt-2 p-3 text-2xl text-gray-500 outline-0 border-b-4 border-dashed border-yellow-300;
+}
