--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,5 @@
 }
 
 .todo_input {
-    @apply w-full flex rounded-lg mt-2 p-3 text-2xl text-gray-500 outline-0 border-b-4 border-dashed border-yellow-300;
+    @apply w-full flex rounded-lg mt-2 p-3 text-2xl text-gray-500 border-b-4 border-dashed border-yellow-300 outline-none;
 }
