--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,10 @@
 .todo_input {
     @apply w-full flex rounded-lg mt-2 p-3 text-2xl text-gray-500 border-b-4 border-dashed border-yellow-300 outline-none;
 }
+.orange_gradient {
+    @apply bg-gradient-to-r from-amber-200 via-orange-300 to-yellow-200 bg-clip-text text-transparent;
+}
+
+.glassmorphism {
+    @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
+  }
