--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,6 @@
 .glassmorphism {
     @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
   }
+/* .heading_property{
+    
+} */
